PROJ2/E-2.5.101-Player/wdir_msg/compile.err

Player.java:88: error: incompatible types: possible lossy conversion from double to int
                if (grid[i][j]!=0) grid[i][j]=Math.pow(2,grid[i][j]);
                                                      ^
1 error


